[project]
name = "pydeck"
version = "0.9.0"
requires-python = ">=3.8"

[build-system]
requires = [
  "setuptools",
  "wheel",
]

[tool.black]
line-length = 120
target-version = ['py34']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
