[project]
name = "pydeck"
version = "0.9.1"
requires-python = ">=3.8"
dynamic = ["readme", "license", "authors", "keywords", "classifiers", "dependencies", "optional-dependencies", "description", "urls"]

[build-system]
requires = [
  "setuptools",
  "wheel",
]

[tool.uv]
python-preference = "managed"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
  )/
)
'''
