[build-system]
requires = ["jupyter_packaging~=0.10,<2", "jupyterlab~=3.1"]
build-backend = "jupyter_packaging.build_api"

[tool.jupyter-packaging.options]
skip-if-exists = ["pydeck/labextension/static/style.js"]
ensured-targets = ["pydeck/labextension/static/style.js", "pydeck/labextension/package.json"]

[tool.jupyter-packaging.builder]
factory = "jupyter_packaging.npm_builder"

[tool.jupyter-packaging.build-args]
build_cmd = "build:prod"
source_dir = "../../modules/jupyter-widget"
npm = ["jlpm"]

[tool.check-manifest]
ignore = ["pydeck/labextension/**", "yarn.lock", ".*", "package-lock.json"]
